Fixing overflow of main app container.

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
 .About-container{
     width: 100%;
     height: 2000px;
-    font-size: 15pt;
+    font-size: 2vw;
     position: relative;
     background-color: rgb(167, 32, 32);
     color: black;
@@ -61,6 +61,9 @@ hr{
     position: relative;
 }
 
+.dummy-container{
+    height: 550px;
+}
 
 
 /** CSS TRANSITION*/
@@ -92,3 +95,10 @@ hr{
     display: inline-block;
     color: darkred;
 }
+
+
+@media screen and (max-width: 767px) {
+    div.dummy-container{
+        height: 450px;
+    }    
+  }
